# craplisp

./: README.md  craplisp.py  interpreter.py  parser.py  tokeniser.py
haskell/: LICENSE  craplisp.cabal
haskell/src/: Craplisp.hs  Interpreter.hs  Parser.hs  Tokeniser.hs
haskell/tests/: test-craplisp.hs
haskell/tests/Tests/: Interpreter.hs  Parser.hs  Tokeniser.hs
libs/: __init__.py  interpreter.py  parser.py  programreader.py  tokeniser.py
libs/tests/: testinterpreter.py  testparser.py  testprogramreader.py  testtokeniser.py
python/libs/: interpreter.py  programreader.py
python/libs/tests/: testprogramreader.py  testtokeniser.py
scripts/: bigger.cl  errortest.cl  functest.cl  maths.cl
tests/: testinterpreter.py  testparser.py  testprogramreader.py  testtokeniser.py
